--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "emoji-picker-react": "^4.8.0",
     "lucide-react": "^0.351.0",
     "next": "14.1.3",
+    "peerjs": "^1.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "socket.io-client": "^4.7.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
